<resources>
    <string name="app_name">"ArgenTruck-partner "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_surname">Apellido</string>
    <string name="prompt_direccion">Direccion</string>
    <string name="prompt_cbu">CBU</string>
    <string name="prompt_telephone">Telefono</string>
    <string name="action_register">Crear Cuenta</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="error_invalid_email">Direccion de email invalida</string>
    <string name="error_invalid_password">"La contraseña es muy corta, debe tener al menos 8 caracteres"</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tus_viajes">Tus viajes</string>
    <string name="clientes">Clientes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="origen">Origen:</string>
    <string name="destino">Destino:</string>
    <string name="title_activity_maps">Map</string>
    <string name="crear_viaje">Crear nuevo viaje</string>
    <string name="capacidad_maxima">Capacidad Maxima:</string>
    <string name="fecha_viaje">Fecha (dd-mm-aaaa):</string>
    <string name="http_ip">http://192.168.0.27:3000</string>
</resources>
